fabric/support/test/tests/noble_ui/type_value_forgotten_where_clause.stderr
error[E0277]: the trait bound `<T as fabric_system::Config>::AccountId: From<u32>` is not satisfied
  --> $DIR/type_value_forgotten_where_clause.rs:24:34
   |
7  |     pub trait Config: fabric_system::Config
   |               ------ required by a bound in this
8  |     where <Self as fabric_system::Config>::AccountId: From<u32>
   |                                                      --------- required by this bound in `noble::Config`
...
24 |     #[noble::type_value] fn Foo<T: Config>() -> u32 { 3u32 }
   |                                     ^^^^^^ the trait `From<u32>` is not implemented for `<T as fabric_system::Config>::AccountId`
   |
help: consider further restricting the associated type
   |
24 |     #[noble::type_value] fn Foo<T: Config>() -> u32 where <T as fabric_system::Config>::AccountId: From<u32> { 3u32 }
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `<T as fabric_system::Config>::AccountId: From<u32>` is not satisfied
  --> $DIR/type_value_forgotten_where_clause.rs:24:12
   |
7  |     pub trait Config: fabric_system::Config
   |               ------ required by a bound in this
8  |     where <Self as fabric_system::Config>::AccountId: From<u32>
   |                                                      --------- required by this bound in `noble::Config`
...
24 |     #[noble::type_value] fn Foo<T: Config>() -> u32 { 3u32 }
   |               ^^^^^^^^^^ the trait `From<u32>` is not implemented for `<T as fabric_system::Config>::AccountId`
   |
help: consider further restricting the associated type
   |
24 |     #[noble::type_value where <T as fabric_system::Config>::AccountId: From<u32>] fn Foo<T: Config>() -> u32 { 3u32 }
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `<T as fabric_system::Config>::AccountId: From<u32>` is not satisfied
  --> $DIR/type_value_forgotten_where_clause.rs:24:12
   |
7  |     pub trait Config: fabric_system::Config
   |               ------ required by a bound in this
8  |     where <Self as fabric_system::Config>::AccountId: From<u32>
   |                                                      --------- required by this bound in `noble::Config`
...
24 |     #[noble::type_value] fn Foo<T: Config>() -> u32 { 3u32 }
   |               ^^^^^^^^^^ the trait `From<u32>` is not implemented for `<T as fabric_system::Config>::AccountId`
   |
help: consider further restricting the associated type
   |
24 |     #[noble::type_value] fn Foo<T: Config>() -> u32 where <T as fabric_system::Config>::AccountId: From<u32> { 3u32 }
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
